--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>TrackRepost</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TrackRepost - Grow Your Music</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #121212;
+            color: white;
+        }
+        header {
+            background-color: #1DB954;
+            padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .hero {
+            padding: 50px;
+        }
+        .hero h1 {
+            font-size: 40px;
+            margin-bottom: 10px;
+        }
+        .hero p {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+        .btn {
+            background-color: #1DB954;
+            color: white;
+            padding: 15px 30px;
+            text-decoration: none;
+            font-size: 18px;
+            border-radius: 5px;
+            display: inline-block;
+        }
+        .btn:hover {
+            background-color: #17a84b;
+        }
+        .footer {
+            margin-top: 50px;
+            padding: 20px;
+            background: #1c1c1c;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to TrackRepost</h1>
-    <p>Your music reposting platform!</p>
+    <header>🎵 TrackRepost - Boost Your Music Reach</header>
+
+    <div class="hero">
+        <h1>Promote Your Music, Get More Plays</h1>
+        <p>Join TrackRepost to exchange reposts and grow your audience.</p>
+        <a href="#" class="btn">Get Started</a>
+    </div>
+
+    <div class="footer">
+        &copy; 2024 TrackRepost. All Rights Reserved.
+    </div>
 </body>
 </html>
