--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@ import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, si
 const firebaseConfig = {
     apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
     authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-    projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_PROJECT_ID.appspot.com",
-    messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-    appId: "YOUR_APP_ID"
+    projectId: "trackrepost-921f8",
+    storageBucket: "trackrepost-921f8.appspot.com",
+    messagingSenderId: "967836604288",
+    appId: "project-967836604288
+"
 };
 
 // Initialize Firebase
