--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TrackRepost - Boost Your Music Reach</title>
@@ -25,38 +26,4 @@
     <p>Credits: <span id="creditCount">0</span></p>
 
     <h2>Repost & Earn Credits</h2>
-    <input type="number" id="followerCount" placeholder="Enter Your Followers">
-    <button onclick="saveFollowers()">Save</button>
-    <p>Followers: <span id="followersDisplay">0</span></p>
-
-    <script type="module" src="./auth.js"></script>
-    <script type="module">
-        import { signup, login, logout } from "./auth.js";
-
-        window.signupUser = function() {
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
-            signup(email, password)
-                .then(() => alert("Signup Successful!"))
-                .catch(err => alert(err.message));
-        };
-
-        window.loginUser = function() {
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
-            login(email, password)
-                .then(() => alert("Login Successful!"))
-                .catch(err => alert(err.message));
-        };
-
-        window.logoutUser = function() {
-            logout().then(() => alert("Logged Out!"));
-        };
-
-        window.saveFollowers = function() {
-            const followerCount = parseInt(document.getElementById("followerCount").value) || 0;
-            document.getElementById("followersDisplay").innerText = followerCount;
-        };
-    </script>
-</body>
-</html>
+    <input type="number" id="followerCou
