--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <body>
     <header>
+        <link rel="stylesheet" href="styles.css">
         <h1>🎵 TrackRepost - Boost Your Music Reach</h1>
         <p>Promote Your Music, Get More Plays</p>
     </header>
