--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     </div>
 
     <div class="container">
-        <h2>Submit Your SoundCloud Track</h2>
-        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
-        <button onclick="submitTrack()">Submit</button>
+    <h2>Submit Your SoundCloud Track</h2>
+    <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
+    <button onclick="submitTrack()">Submit</button>
+    <p id="currentTrackMessage"></p>
     </div>
+
 
     <div class="container">
         <h2>Your Dashboard</h2>
