--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TrackRepost - Boost Your Music Reach</title>
+
+
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+</head>
 <body>
+
     <header>
-        <link rel="stylesheet" href="styles.css">
         <h1>🎵 TrackRepost - Boost Your Music Reach</h1>
         <p>Promote Your Music, Get More Plays</p>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
-
     </header>
 
     <div class="container">
@@ -22,12 +30,11 @@
     </div>
 
     <div class="container">
-    <h2>Submit Your SoundCloud Track</h2>
-    <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
-    <button onclick="submitTrack()">Submit</button>
-    <p id="currentTrackMessage"></p>
+        <h2>Submit Your SoundCloud Track</h2>
+        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
+        <button onclick="submitTrack()">Submit</button>
+        <p id="currentTrackMessage"></p>
     </div>
-
 
     <div class="container">
         <h2>Your Dashboard</h2>
@@ -46,43 +53,77 @@
         <p>© 2024 TrackRepost. All Rights Reserved.</p>
     </footer>
 
-    <script type="module" src="./auth.js"></script>
-    <script type="module">
-        import { signup, login, logout } from "./auth.js";
+    
+    <script>
+        // Firebase Config (Replace with your actual credentials)
+        const firebaseConfig = {
+            apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
+            authDomain: "trackrepost-921f8.firebaseapp.com",
+            projectId: "trackrepost-921f8",
+            storageBucket: "trackrepost-921f8.firebasestorage.app",
+            messagingSenderId: "967836604288",
+            appId: "1:967836604288:web:3782d50de7384c9201d365"
+            measurementId: "G-G65Q3HC3R8"
+        };
 
-        window.signupUser = function() {
+
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+        const db = firebase.firestore();
+
+        function signupUser() {
             const email = document.getElementById("email").value;
             const password = document.getElementById("password").value;
-            signup(email, password)
-                .then(() => alert("Signup Successful!"))
-                .catch(err => alert(err.message));
-        };
 
-        window.loginUser = function() {
+            auth.createUserWithEmailAndPassword(email, password)
+                .then((userCredential) => {
+                    alert("Signup Successful! Welcome " + userCredential.user.email);
+                })
+                .catch((error) => {
+                    alert("Signup Error: " + error.message);
+                    console.error(error);
+                });
+        }
+
+        function loginUser() {
             const email = document.getElementById("email").value;
             const password = document.getElementById("password").value;
-            login(email, password)
-                .then(() => alert("Login Successful!"))
-                .catch(err => alert(err.message));
-        };
 
-        window.logoutUser = function() {
-            logout().then(() => alert("Logged Out!"));
-        };
+            auth.signInWithEmailAndPassword(email, password)
+                .then((userCredential) => {
+                    alert("Login Successful! Welcome " + userCredential.user.email);
+                })
+                .catch((error) => {
+                    alert("Login Error: " + error.message);
+                    console.error(error);
+                });
+        }
 
-        window.saveFollowers = function() {
+        function logoutUser() {
+            auth.signOut()
+                .then(() => {
+                    alert("Logged Out!");
+                })
+                .catch((error) => {
+                    alert("Logout Error: " + error.message);
+                    console.error(error);
+                });
+        }
+
+        function saveFollowers() {
             const followerCount = parseInt(document.getElementById("followerCount").value) || 0;
             document.getElementById("followersDisplay").innerText = followerCount;
-        };
+        }
 
-        window.submitTrack = function() {
+        function submitTrack() {
             const soundcloudUrl = document.getElementById("soundcloudUrl").value;
             if (soundcloudUrl) {
                 alert("SoundCloud Track Submitted: " + soundcloudUrl);
             } else {
                 alert("Please enter a valid SoundCloud URL.");
             }
-        };
+        }
     </script>
+
 </body>
 </html>
