--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TrackRepost - Boost Your Music Reach</title>
+    <link rel="stylesheet" href="styles.css">
 
-
+    <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
+    <!-- Load Authentication Script -->
+    <script src="auth.js" defer></script>
 </head>
 <body>
 
@@ -53,63 +56,7 @@
         <p>© 2024 TrackRepost. All Rights Reserved.</p>
     </footer>
 
-    
     <script>
-        // Firebase Config (Replace with your actual credentials)
-        const firebaseConfig = {
-            apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
-            authDomain: "trackrepost-921f8.firebaseapp.com",
-            projectId: "trackrepost-921f8",
-            storageBucket: "trackrepost-921f8.firebasestorage.app",
-            messagingSenderId: "967836604288",
-            appId: "1:967836604288:web:3782d50de7384c9201d365"
-            measurementId: "G-G65Q3HC3R8"
-        };
-
-
-        firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-        const db = firebase.firestore();
-
-        function signupUser() {
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
-
-            auth.createUserWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    alert("Signup Successful! Welcome " + userCredential.user.email);
-                })
-                .catch((error) => {
-                    alert("Signup Error: " + error.message);
-                    console.error(error);
-                });
-        }
-
-        function loginUser() {
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
-
-            auth.signInWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    alert("Login Successful! Welcome " + userCredential.user.email);
-                })
-                .catch((error) => {
-                    alert("Login Error: " + error.message);
-                    console.error(error);
-                });
-        }
-
-        function logoutUser() {
-            auth.signOut()
-                .then(() => {
-                    alert("Logged Out!");
-                })
-                .catch((error) => {
-                    alert("Logout Error: " + error.message);
-                    console.error(error);
-                });
-        }
-
         function saveFollowers() {
             const followerCount = parseInt(document.getElementById("followerCount").value) || 0;
             document.getElementById("followersDisplay").innerText = followerCount;
