--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,11 +8,27 @@
     <link rel="stylesheet" href="styles.css">
 
     <!-- ✅ Load Firebase from Google's CDN -->
-    <script src="https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/11.4.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
 
-    <!-- ✅ Load Authentication Script AFTER Firebase -->
+    <!-- ✅ Initialize Firebase before loading auth.js -->
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
+            authDomain: "trackrepost-921f8.firebaseapp.com",
+            projectId: "trackrepost-921f8",
+            storageBucket: "trackrepost-921f8.appspot.com",
+            messagingSenderId: "967836604288",
+            appId: "1:967836604288:web:3782d50de7384c9201d365",
+            measurementId: "G-G65Q3HC3R8"
+        };
+        
+        // ✅ Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+    </script>
+
+    <!-- ✅ Load Authentication Script AFTER Firebase is initialized -->
     <script src="auth.js" defer></script>
 </head>
 
