--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,20 +11,29 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
 
-    <!-- ✅ Initialize Firebase before loading auth.js -->
+    <!-- ✅ Ensure Firebase is initialized before `auth.js` -->
     <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
-            authDomain: "trackrepost-921f8.firebaseapp.com",
-            projectId: "trackrepost-921f8",
-            storageBucket: "trackrepost-921f8.appspot.com",
-            messagingSenderId: "967836604288",
-            appId: "1:967836604288:web:3782d50de7384c9201d365",
-            measurementId: "G-G65Q3HC3R8"
-        };
-        
-        // ✅ Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
+        document.addEventListener("DOMContentLoaded", function () {
+            if (typeof firebase === "undefined") {
+                console.error("🚨 Firebase failed to load! Check if Firebase scripts are included correctly.");
+            } else {
+                console.log("✅ Firebase Loaded Successfully!");
+
+                const firebaseConfig = {
+                    apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
+                    authDomain: "trackrepost-921f8.firebaseapp.com",
+                    projectId: "trackrepost-921f8",
+                    storageBucket: "trackrepost-921f8.appspot.com",
+                    messagingSenderId: "967836604288",
+                    appId: "1:967836604288:web:3782d50de7384c9201d365",
+                    measurementId: "G-G65Q3HC3R8"
+                };
+
+                if (!firebase.apps.length) {
+                    firebase.initializeApp(firebaseConfig);
+                }
+            }
+        });
     </script>
 
     <!-- ✅ Load Authentication Script AFTER Firebase is initialized -->
