--- a/index.html
+++ b/index.html
@@ -51,16 +51,20 @@
     </div>
 
     <div class="container">
+        <h2>Your Dashboard</h2>
+        <div id="userDashboard">
+            <h3>You are not logged in.</h3>
+            <p>Please log in or sign up.</p>
+        </div>
+        <p>Reposts: <span id="repostCount">0</span></p>
+        <p>Credits: <span id="creditCount">0</span></p>
+    </div>
+
+    <div class="container">
         <h2>Submit Your SoundCloud Track</h2>
         <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
         <button onclick="submitTrack()">Submit</button>
         <p id="currentTrackMessage"></p>
-    </div>
-
-    <div class="container">
-        <h2>Your Dashboard</h2>
-        <p>Reposts: <span id="repostCount">0</span></p>
-        <p>Credits: <span id="creditCount">0</span></p>
     </div>
 
     <div class="container">
@@ -92,4 +96,3 @@
 
 </body>
 </html>
-
