--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <p>Reposts: <span id="repostCount">0</span></p>
         <p>Credits: <span id="creditCount">0</span></p>
-        <button onclick="repostTrack()">Repost & Earn Credits</button>
+        <button id="repostButton" onclick="repostTrack()" disabled>Repost & Earn Credits</button>
     </div>
 
     <div class="container">
