--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +7,31 @@
     <title>TrackRepost - Boost Your Music Reach</title>
     <link rel="stylesheet" href="styles.css">
 
-    <!-- ✅ Load Firebase from Google's CDN -->
+    <!-- ✅ Load Firebase from Google's CDN (Firebase v8 for compatibility) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+    <!-- ✅ Ensure Firebase is initialized BEFORE loading auth.js -->
+    <script>
+        var firebaseConfig = {
+            apiKey: "AIzaSyAGmhdeSxshYSmaAbsMtda4qa1K3TeKiYw",
+            authDomain: "trackrepost-921f8.firebaseapp.com",
+            projectId: "trackrepost-921f8",
+            storageBucket: "trackrepost-921f8.appspot.com",
+            messagingSenderId: "967836604288",
+            appId: "1:967836604288:web:3782d50de7384c9201d365",
+            measurementId: "G-G65Q3HC3R8"
+        };
+
+        // ✅ Check if Firebase is already initialized before initializing
+        if (!firebase.apps.length) {
+            firebase.initializeApp(firebaseConfig);
+            console.log("✅ Firebase Initialized Successfully!");
+        } else {
+            console.log("⚠️ Firebase was already initialized.");
+        }
+    </script>
 
     <!-- ✅ Load Authentication Script AFTER Firebase is initialized -->
     <script src="auth.js" defer></script>
@@ -41,13 +63,30 @@
         </div>
         <p>Reposts: <span id="repostCount">0</span></p>
         <p>Credits: <span id="creditCount">0</span></p>
-        <button onclick="repostTrack()" id="repostButton">Repost & Earn Credits</button>
+        <button onclick="repostTrack()">Repost & Earn Credits</button>
+    </div>
+
+    <div class="container">
+        <h2>Submit Your SoundCloud Track</h2>
+        <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
+        <button onclick="submitTrack()">Submit</button>
+        <p id="currentTrackMessage"></p>
     </div>
 
     <footer>
         <p>© 2024 TrackRepost. All Rights Reserved.</p>
     </footer>
 
+    <script>
+        function submitTrack() {
+            const soundcloudUrl = document.getElementById("soundcloudUrl").value.trim();
+            if (soundcloudUrl) {
+                alert("SoundCloud Track Submitted: " + soundcloudUrl);
+            } else {
+                alert("Please enter a valid SoundCloud URL.");
+            }
+        }
+    </script>
+
 </body>
 </html>
-
