--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TrackRepost - Boost Your Music Reach</title>
     <link rel="stylesheet" href="styles.css">
 
-    <!-- ✅ Load Firebase from Google's CDN (Firebase v8 for compatibility) -->
+    <!-- ✅ Load Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
@@ -19,8 +19,7 @@
             projectId: "trackrepost-921f8",
             storageBucket: "trackrepost-921f8.appspot.com",
             messagingSenderId: "967836604288",
-            appId: "1:967836604288:web:3782d50de7384c9201d365",
-            measurementId: "G-G65Q3HC3R8"
+            appId: "1:967836604288:web:3782d50de7384c9201d365"
         };
 
         if (!firebase.apps.length) {
@@ -29,7 +28,7 @@
         }
     </script>
 
-    <!-- ✅ Load Authentication Script AFTER Firebase is initialized -->
+    <!-- ✅ Load Authentication & Reposting Scripts -->
     <script src="auth.js" defer></script>
 </head>
 
