--- a/index.html
+++ b/index.html
@@ -51,15 +51,13 @@
         </div>
     </div>
 
+    <!-- ✅ This is the ONLY dashboard section -->
     <div class="container">
         <h2>Your Dashboard</h2>
         <div id="userDashboard">
             <h3>You are not logged in.</h3>
             <p>Please log in or sign up.</p>
         </div>
-        <p>Reposts: <span id="repostCount">0</span></p>
-        <p>Credits: <span id="creditCount">0</span></p>
-        <button onclick="repostTrack()">Repost & Earn Credits</button>
     </div>
 
     <footer>
