--- a/index.html
+++ b/index.html
@@ -60,9 +60,15 @@
         </div>
     </div>
 
+    <!-- ✅ Footer with Auto-Updating Year -->
     <footer>
-        <p>© 2024 TrackRepost. All Rights Reserved.</p>
+        <p>© <span id="currentYear"></span> TrackRepost. All Rights Reserved.</p>
     </footer>
+
+    <!-- ✅ Script to Automatically Update the Year -->
+    <script>
+        document.getElementById("currentYear").textContent = new Date().getFullYear();
+    </script>
 
 </body>
 </html>
